[package]
name = "onewire"
version = "1.0.0"
authors = ["Michael Watzko <michael@watzko.de>", "K. <kayo@illumium.org>"]
repository = "https://github.com/kellerkindt/onewire"
description = "OneWire implementation using embedded_hal as abstraction layer, based on arduino OneWire library. WIP"
keywords = ["embedded", "onewire", "embedded-hal-driver", "1wire", "stm32"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
byteorder = { version = "1", default-features = false }

[dependencies.embedded-hal]
version = "1.0.0-rc.1"

[dev-dependencies.cortex-m]
version = "0.7"

[dev-dependencies.stm32f1xx-hal]
version = "0.10"
features = ["stm32f103"]

[features]
default = ["rw1990", "ds18b20"]
ds1990 = []
rw1990 = ["ds1990"]
ds18b20 = []
